--- a/src/components/pages/homePage/Header/style.css
+++ b/src/components/pages/homePage/Header/style.css
@@ -9,8 +9,7 @@
   transition: opacity .2s;
 
   @mixin isMobile {
-    position: absolute;
-    top: unset;
+    position: relative;
     opacity: 1;
   }
 
