--- a/src/components/pages/homePage/Intro/style.css
+++ b/src/components/pages/homePage/Intro/style.css
@@ -2,9 +2,11 @@
   display: flex;
   justify-content: center;
   padding: 30px;
+}
 
+.is-header-fixed {
   @mixin isMobile {
-    padding: 65px 0 0 0;
+    padding: 90px 0 0 0;
   }
 }
 
