--- a/src/components/style.css
+++ b/src/components/style.css
@@ -13,3 +13,7 @@ p {
   margin: 0;
   padding: 0;
 }
+
+* {
+  box-sizing: border-box;
+}
